# grav

./: CMakeLists.txt  input.txt  main.c  plot_script.p
plot/: grav.sh  plot_script.p
resources/: input.txt  output.txt
src/: compile_flags.txt
src/include/: list.h  metric_field.h  particle.h  queue.h  set.h  tensor_deifnes.h
src/main/: list.c  main.c  metric_field.c  particle.c  queue.c  set.c
src/test/: list_test.c  main_test.c
